# Computer-Graphics-2020

./: README.md
code/: CMakeLists.txt  run_all.sh
code/include/: camera.hpp  hit.hpp  hitpointmap.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  obj_parser.hpp  object3d.hpp  pathtracer.hpp  photon.hpp  photonmap.hpp  photontracer.hpp  ray.hpp  raytracer.hpp  scene.hpp  scene_parser.hpp  utils.h  volumetricphotontracer.hpp
code/src/: camera.cpp  hit.cpp  hitpointmap.cpp  image.cpp  kdtree.cpp  light.cpp  main.cpp  material.cpp  obj_parser.cpp  object3d.cpp  pathtracer.cpp  photonmap.cpp  photontracer.cpp  raytracer.cpp  scene.cpp  scene_parser.cpp  volumetricphotontracer.cpp
code/vecmath/: CMakeLists.txt
code/vecmath/include/: Matrix2f.h  Matrix3f.h  Matrix4f.h  Quat4f.h  Vector2f.h  Vector3f.h  Vector4f.h
code/vecmath/src/: Matrix2f.cpp  Matrix3f.cpp  Matrix4f.cpp  Quat4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
